Security/registry-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: private-registry.io/nginx
  imagePullSecrets:
  - name: reqcred
