Security/security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  #securityContext:
  #  runAsUser: 1000
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep","3600"]
    securityContext:
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
